<resources>
    <string name="app_name">Champy</string>
    <string name="app_id">433222243507216</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_duel">Duel</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_photo">Photo</string>
    <string name="title_activity_wake_up">WakeUp</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_pending_duel">Pending Duel</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_self_improvement">SelfImprovement</string>
    <string name="youWantToGiveUp">You want to give up?</string>
    <string name="youWantAcceptRequest">You want to accept request?</string>
    <string name="youWantCancelRequest">You want to cancel request?</string>
    <string name="youWantSendDuelRequest">You want to send duel request?</string>
    <string name="youWantToDeleteYourAcc">You want to delete your account?</string>
    <string name="youWantCreateThisChall">You want to create this challenge?</string>
    <string-array name="nav_item_activity_titles">
        <item>Challenges</item>
        <item>Friends</item>
        <item>Settings | Profile</item>
        <item>Settings | Notifications</item>
        <item>Settings | Helps </item>
        <item>Terms</item>
        <item>Privacy Police</item>
        <item>Champy</item>
    </string-array>
    <string name="terms">Terms</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="legal">Legal:</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="challenges">Challenges</string>
    <string name="pending_duels">Pending Duels</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="name">Name</string>
    <string name="challenge_end">Challenge End</string>
    <string name="notifications">Notifications:</string>
    <string name="delete_account">Delete Account</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="profile_pictures">Profile Picture</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="take_photo_from_camera">Take a picture</string>
    <string name="take_photo_from_gallery">Choose from Gallery</string>
    <string name="new_challenge_requests">New Challenge Requests</string>
    <string name="accepted_your_challenge">Accepted Your Challenge</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="yes">Yes</string>
    <string name="wins">Wins</string>
    <string name="days">Days</string>
    <string name="hint_21">21</string>
    <string name="total">Total</string>
    <string name="failed">Failed</string>
    <string name="twenty_one">21</string>
    <string name="_21_days">21 DAYS</string>
    <string name="welcome">"Welcome "</string>
    <string name="inProgress">In Progress</string>
    <string name="in_progress">Challenges</string>
    <string name="areYouSure">Are you sure</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="everyday_for_next">everyday for next</string>
    <string name="everyday_for_the_next">everyday for the next</string>
    <string name="champy">" Champy"</string>
    <string name="wake_up">wake up!</string>
    <string name="wake_up_at">WAKE UP AT</string>
    <string name="daysToGo">" DAYS TO GO"</string>
    <string name="i_challenge_myself_to">I challenge myself to</string>
    <string name="enter_your_challenge">Enter your challenge</string>
    <string name="info_about_challenge">Info about challenge</string>
    <string name="done_for_today">Done for today?</string>
    <string name="duel_with">"Duel with "</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="your_message">Your message</string>
    <string name="waiting_for_your_recipient">waiting for recipient</string>
    <string name="challenge_created">Challenge created!</string>
    <string name="challenge_canceled">Challenge canceled</string>
    <string name="challenges_to_much">You have too much challenges</string>
    <string name="i_challenge_my_friend_to">I challenge my friend to</string>
    <string name="challenge_cant_create">Can\'t create this challenge</string>
    <string name="challenge_canceled_by_opponent">The challenge has been canceled by the opponent</string>
    <string name="sent_duel_request">Sent duel request</string>
    <string name="wake_up_challenge">Wake-Up challenge</string>
    <string name="wake_up_n_challenge">wake up \nchallenge</string>
    <string name="duel_challenge">Duel challenge</string>
    <string name="duel_challenge_with">Duel Challenge \n with</string>
    <string name="self_improvement">Self-Improvement</string>
    <string name="self_improvement_challenge">self-improvement \n challenge</string>
    <string name="text_no_pending_duels">Looks like you don’t have\npending duels for the moment</string>
    <string name="lostInternetConnection">Lost internet connection</string>
    <string name="share_text">Constantly improving myself with Champy\n</string>
    <string name="how_would_you_like_to_share">How would you like to share?</string>
    <string name="champyapp_link">\nhttp://champyapp.com</string>
    <string name="noOneHasInstalledChampy">No one of your friends has not installed Champy!</string>
    <string name="service_not_available">Service is not available. Try again later</string>
    <string name="share_text2">Check out Champy - it helps you improve and compete with your friends!</string>
    <string name="lost_inet_wake_up">If you would like to check your wake-up challenge, please connect to the Internet, then open Champy and make it done for today there.</string>
    <string name="loginText">\'\'it\'s your thinking that \n decides whether you\'re \n going to succeed or fail\'\' - \n henry ford</string>
    <string name="foreveralonetext">You don\'t seem to be that guy</string>
    <string name="foreveralonetext2">get extra motivation and have fun challenging your
                                    \n
                                    friends. improve together and compete to become the
                                    \n
                                    ultimate champy!</string>
    <string name="nothing_here_yet">Nothing here yet,\n let\'s create a New Challenge!</string>
    <string name="challenge_rules">Challenges last 21 days or 4 streaks. Streaks
                                   get longer with progress.
                                   \n\nThe 1 streak is 1 day, the second is 3 days,
                                   the third is 7 and the fourth streak is 10 days
                                   long. You have the possibility to skip every
                                   first day of any streak starting from the
                                   second one.
                                   \n\nChallenges start by checking off the first day
                                   after their creation. Unchecked challenges
                                   are considered failed and get deleted
                                   automatically, unless you are at the end of a
                                   streak.
                                   \n\nYou win the challenge by completing all 4 streaks.</string>
    <string name="challenge_created_large_text">You just created a Challenge.
                                                Check in tomorrow to complete your first
                                                Streak and get started. Every journey
                                                starts with the first step.</string>
    <string name="color">Color</string>
    <string name="facebook">Facebook</string>
</resources>