<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/nav_challenges"
            android:icon="@mipmap/nav_challenges"
            android:title="@string/challenges" />
    </group>


    <group android:title="@string/settings">
        <item android:title="Settings">
            <menu>
                <item
                    android:id="@+id/nav_settings_profile"
                    android:icon="@mipmap/nav_settings"
                    android:title="Profile" />
                <item
                    android:id="@+id/nav_settings_notifications"
                    android:icon="@mipmap/nav_settings"
                    android:title="Notifications" />
                <item
                    android:id="@+id/nav_settings_help_and_feedback"
                    android:icon="@mipmap/nav_settings"
                    android:title="Help and Feedback" />
            </menu>
        </item>
    </group>


    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_terms"
                android:title="@string/terms" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>



</menu>