<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ChampyMainTheme.NoActionBar"
    android:background="@drawable/gradient_champy">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageViewChampy"
        android:background="@drawable/ic_champy_circle"
        android:contentDescription="@string/champy"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvChampy"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/imageViewChampy"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLostInternetConnection"
        android:text="@string/lostInternetConnection"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        android:textAllCaps="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageRetry"
        android:src="@drawable/button_refresh"
        android:visibility="invisible"
        android:layout_below="@+id/tvLostInternetConnection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />


    <include
        layout="@layout/item_progress_bar"
        android:visibility="visible"/>

</RelativeLayout>
