<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_non_edit"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="8dp">

    <!--   Recycler View Item Row   -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goal_text"
            android:textAllCaps="true"
            android:textColor="@color/color_text_aqua"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:visibility="visible"
            android:paddingTop="20dp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_goal"
            android:textAllCaps="false"
            android:textColor="@color/color_text_aqua"
            android:textColorHint="@color/color_hint"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:hint="@string/enter_your_challenge"
            android:maxLength="25"
            android:paddingTop="22dp"
            android:inputType="textCapSentences"
            android:visibility="invisible"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/line"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="#339997"
            android:layout_below="@+id/goal_text"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/everyday_for_the_next"
            android:id="@+id/tvEveryDaySelf"
            android:layout_below="@id/line"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/days_text"
            android:text="@string/_21_days"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/color_text_aqua"
            android:visibility="visible"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingTop="25dp"
            android:layout_below="@+id/tvEveryDaySelf"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/button_minus"
            android:id="@+id/imageButtonMinus"
            android:visibility="invisible"
            android:layout_alignTop="@+id/et_days"
            android:layout_toLeftOf="@+id/days_text"
            android:layout_toStartOf="@+id/days_text" />

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/button_plus"
            android:id="@+id/imageButtonPlus"
            android:visibility="invisible"
            android:layout_alignTop="@+id/et_days"
            android:layout_toRightOf="@+id/days_text"
            android:layout_toEndOf="@+id/days_text" />

        <TextView
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:id="@+id/et_days"
            android:visibility="invisible"
            android:gravity="center"
            android:text="@string/twenty_one"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/color_text_aqua"
            android:layout_alignBottom="@+id/days_text"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:id="@+id/textDays"
            android:text="@string/days"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/color_text_aqua"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_below="@+id/days_text"
            android:layout_alignLeft="@+id/et_days"
            android:layout_alignStart="@+id/et_days" />


    </RelativeLayout>

</android.support.v7.widget.CardView>